--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,11 +1,18 @@
-.titulo{
-    color: blue;
-    text-align: center;
+.caixa{
+    background-color: #FFEAEA;
 }
 
-.img{
-    width: 500px;
-    height: 500px;
-    display: block;
-    margin: 0 auto;
+.titulo{
+    color: #B4304A!important; 
+    font-weight: "bold"!important;
+}
+
+.botao{
+    border-color: white!important; 
+    background-color: #FA5124!important; 
+    color: white!important;
+}
+
+.postagens{
+    background-color: white;
 }
