--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -1,9 +1,19 @@
 .textos{
     font-weight: bold!important;
+    color: #B4304A!important;
+    
+}
+
+.cor{
+    background-color: #FFEAEA!important;
+    background-repeat: no-repeat;
+    width: 100vh; 
+    min-height: 100vh;
+    background-size: cover;
 }
 
 .imagem{
-        background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
+        background-image: url(https://i.imgur.com/ATJsJ6A.png);
         background-repeat: no-repeat;
         width: 100vh; 
         min-height: 100vh;
@@ -15,4 +25,8 @@
 
 .text-decorator-none{
     text-decoration: none;
+}
+
+.botaologin{
+    background-color: #be6678!important;
 }
